# Volume-Reconstruction

./: CMakeLists.txt  CropImagesWidget.cpp  CropImagesWidget.h  CropImagesWidget.ui  EstimateSphereFromPoints.h  QVTKImageWidget.cpp  QVTKImageWidget.h  README  VolumeReconstruction.cpp  VolumeReconstruction.h  VolumeReconstructionPBM.cpp  VolumeReconstructionPBM.h  VolumeReconstructionWidget.cpp  VolumeReconstructionWidget.h  VolumeReconstructionWidget.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
Data/Data Volume 01/: EstimatedCalibrationParameters.txt  Gauss.mhd  Gauss.raw  GaussAdaptiveDai.mhd  GaussAdaptiveDai.mhd.mhd  GaussAdaptiveDai.mhd.raw  GaussAdaptiveDai.raw  GaussDai.mhd  GaussDai.raw  GaussDai2.mhd  GaussDai2_7.mhd  GaussDai5.mhd  GaussDai5.raw  PBMGauss.mhd  PBMGauss.raw  PlanoImgRot.txt  PlanoImgTrans.txt  Thumbs.db  Volres3.mhd  Volres3.raw
Data/Dimensiones 2/: PlanoImgRot.txt
Data/Dimensiones 3/: PlanoImgRot.txt  Thumbs.db
Data/Rat5on axial/: AgujaTrans.txt  Thumbs.db
Data/Raton Sagital 1/: AgujaTrans.txt  PlanoImgRot.txt  PlanoImgTrans.txt  Thumbs.db
Data/Raton Sagital 2/: AgujaTrans.txt  PlanoImgRot.txt  PlanoImgTrans.txt  Thumbs.db
Data/Raton axial 2/: AgujaTrans.txt  PlanoImgRot.txt  PlanoImgTrans.txt  (+1 more)
Pruebas/: PlanoImgRot.txt  PlanoImgTrans.txt
html/: annotated.html  classes.html  files.html  functions.html  functions_0x63.html  functions_0x64.html  functions_0x65.html  functions_0x67.html  functions_0x69.html  functions_0x6c.html  functions_0x6d.html  functions_0x6e.html  functions_0x6f.html  functions_0x70.html  functions_0x71.html  functions_0x72.html  functions_0x73.html  functions_0x74.html  functions_0x75.html  functions_0x76.html  functions_0x77.html  functions_0x78.html  functions_0x79.html  functions_0x7e.html  functions_func.html  functions_type.html  functions_vars.html  globals.html  globals_func.html  globals_type.html  globals_vars.html  index.html  namespaces.html
latex/: annotated.tex  doxygen.sty  files.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out  refman.tex  refman.toc
nbproject/: Package-Default.bash  configurations.xml  project.xml
(+294 files in other folders)
